--- a/openstack/roles/keystone/handlers/main.yml
+++ b/openstack/roles/keystone/handlers/main.yml
@@ -2,3 +2,5 @@
 # handlers file for keystone
 - name: restart mysql
   service: name=mysql state=restarted
+- name: restart apache
+  service: name=apache2 state=restarted
