--- a/openstack/roles/keystone/vars/main.yml
+++ b/openstack/roles/keystone/vars/main.yml
@@ -4,4 +4,5 @@ mysql_rootpass: password
 mysql_user: keystone
 mysql_userpass: password
 remote_host_ip: '%'
-admin_token: 6f305f2c9197586f275f
+admin_token: a5b2d59412a055cb9d7f
+admin_pass: password
