--- a/openstack/roles/environment/tasks/common.yml
+++ b/openstack/roles/environment/tasks/common.yml
@@ -12,10 +12,10 @@
 - name: Install software properties
   apt: name=software-properties-common  state=installed
 - name: Add OpenStack Repository
-  apt_repository: repo='deb http://ubuntu-cloud.archive.canonical.com/ubuntu trusty-updates/liberty main'
+  command: add-apt-repository cloud-archive:liberty -y
 - name: Update the apt cache with OpenStack Repository
   apt:  update_cache=yes
 - name: Distro upgrade
-  command: apt-get dist-upgrade --allow-unauthenticated
+  apt: upgrade=dist allow_unauthenticated=yes
 - name: Install OpenStack Client
   apt: name=python-openstackclient state=installed allow_unauthenticated=yes
