--- a/openstack/myhosts.ini
+++ b/openstack/myhosts.ini
@@ -6,7 +6,7 @@ localhost ansible_connection=local
 
 [controller:vars]
 ntp_server=3.in.pool.ntp.org
-cont_ip=192.168.70.11
+cont_ip=192.168.0.54
 ansible_nodename=controller
 rabbit_pass=password
 
@@ -15,3 +15,4 @@ rabbit_pass=password
 
 [compute:vars]
 ntp_server=controller
+comp_ip=192.168.0.56
