--- a/openstack/roles/keystone/handlers/main.yml
+++ b/openstack/roles/keystone/handlers/main.yml
@@ -4,3 +4,5 @@
   service: name=mysql state=restarted
 - name: restart apache
   service: name=apache2 state=restarted
+- name: restart keystone
+  service: name=keystone state=restarted
