--- a/openstack/roles/keystone/tasks/install.yml
+++ b/openstack/roles/keystone/tasks/install.yml
@@ -1,6 +1,6 @@
 ---
 - name: Disable Keystone start on boot
-  shell: echo "manual" > /etc/init/keystone.override
+  template: src=keystone.override.j2 dest=/etc/init/keystone.override
 - name: Install Keystone, Apache and Memcache
   apt: name={{item}}  state=installed allow_unauthenticated=yes
   with_items:
@@ -11,6 +11,8 @@
     - python-memcache
 - name: Keystone configuration
   template: src=keystone.conf.j2  dest=/etc/keystone/keystone.conf
+  notify:
+    -restart keystone
 - name: Populate the Identity service database
   shell: su -s /bin/sh -c "keystone-manage db_sync" keystone
   become: yes
