--- a/openstack/roles/keystone/tasks/install.yml
+++ b/openstack/roles/keystone/tasks/install.yml
@@ -9,6 +9,7 @@
     - libapache2-mod-wsgi
     - memcached
     - python-memcache
+- meta: flush_handlers
 - name: Keystone configuration
   template: src=keystone.conf.j2  dest=/etc/keystone/keystone.conf
   notify:
