--- a/openstack/roles/keystone/tasks/install.yml
+++ b/openstack/roles/keystone/tasks/install.yml
@@ -14,6 +14,7 @@
   template: src=keystone.conf.j2  dest=/etc/keystone/keystone.conf
   notify:
   - restart keystone
+- meta: flush_handlers
 - name: Populate the Identity service database
   shell: su -s /bin/sh -c "keystone-manage db_sync" keystone
   become: yes
