--- a/openstack/roles/keystone/tasks/prerequisites.yml
+++ b/openstack/roles/keystone/tasks/prerequisites.yml
@@ -16,3 +16,5 @@
               login_password={{ mysql_rootpass }}
               name=keystone
               host_all=yes
+              state=present
+              priv=keystone.*:ALL
