--- a/openstack/roles/keystone/tasks/api.yml
+++ b/openstack/roles/keystone/tasks/api.yml
@@ -34,5 +34,16 @@
     OS_TOKEN: '{{admin_token}}'
     OS_URL: 'http://controller:35357/v3'
     OS_IDENTITY_API_VERSION: '3'
+- name: Copy Admin project script
+  template: src=project.sh.j2 dest=/openstack/project.sh
+- name: Create Admin project
+shell: bash /openstack/keystone.sh && touch /openstack/admin-pro.txt
+args:
+  creates: /openstack/admin-pro.txt
+environment:
+  OS_TOKEN: '{{admin_token}}'
+  OS_URL: 'http://controller:35357/v3'
+  OS_IDENTITY_API_VERSION: '3'
 - name: Install Python pip
   apt: name=python-pip  state=installed allow_unauthenticated=yes
+- pip: name=shade state=absent
