--- a/openstack/roles/glance/vars/main.yml
+++ b/openstack/roles/glance/vars/main.yml
@@ -1,2 +1,8 @@
 ---
 # vars file for glance
+mysql_rootpass: password
+mysql_user: glance
+mysql_userpass: password
+remote_host_ip: '%'
+admin_pass: password
+openstack_admin_pass: password
